# information

./: .gitignore  README.md  pyproject.toml
.github/workflows/: daily.yml
config/: site.yaml
config/profiles/: ai-tech.yaml
config/sources/: china.yaml  finance.yaml  papers.yaml  science.yaml  startup.yaml  tech.yaml  world.yaml  x.yaml
data/issues/: 2026-05-29.json  2026-05-30.json  2026-05-31.json  2026-06-01.json  2026-06-02.json  2026-06-03.json  2026-06-04.json  2026-06-05.json  2026-06-06.json  2026-06-07.json  2026-06-08.json  2026-06-09.json  2026-06-10.json  2026-06-11.json  2026-06-12.json  2026-06-13.json  2026-06-14.json  2026-06-15.json  2026-06-16.json  2026-06-17.json  2026-06-18.json  2026-06-19.json  2026-06-20.json  2026-06-21.json  2026-06-22.json  2026-06-23.json  2026-06-24.json  2026-06-25.json  2026-06-26.json  2026-06-27.json  2026-06-28.json  2026-06-29.json  2026-06-30.json  2026-07-01.json  2026-07-02.json  2026-07-03.json  2026-07-04.json  2026-07-05.json  2026-07-06.json  2026-07-07.json  (+15 more)
data/raw/: 2026-06-13.json  2026-06-14.json  2026-06-15.json  2026-06-16.json  2026-06-17.json  2026-06-18.json  2026-06-19.json  2026-06-20.json  2026-06-21.json  2026-06-22.json  2026-06-23.json  2026-06-24.json  2026-06-25.json  2026-06-26.json  2026-06-27.json  2026-06-28.json  2026-06-29.json  2026-06-30.json  2026-07-01.json  (+21 more)
docs/: archive.html  index.html  sources.html
templates/: archive.html.j2  issue.html.j2  raw.html.j2  section.html.j2  sources.html.j2
tests/: test_compiler_renderer.py  test_config.py  test_sources.py
(+890 files in other folders)
