[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "information-daily"
version = "0.1.0"
description = "Configurable personal newspaper generator for GitHub Pages"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Jinja2>=3.1",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[project.scripts]
information-daily = "information_daily.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
